03-kustomize-example/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: example-app.do-prod.happyhacking.ninja
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  example-app
                port:
                  name: http
  tls:
    - hosts:
        - example-app.do-prod.happyhacking.ninja
      secretName: example-app-server-tls
